# Chess

./: CMakeLists.txt  Doxyfile.in  compile_build_run.sh
ChessCore/: CMakeLists.txt
ChessCore/include/Pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h
ChessCore/include/framework/: Application.h  AssetManager.h  Board.h  ChessState.h  Core.h  Delegate.h  Object.h  Piece.h  Stage.h
ChessCore/include/widgets/: Button.h  EvaluationBar.h  HUD.h  ImageWidget.h  TextWidget.h  Widget.h
ChessCore/src/Pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
ChessCore/src/framework/: Application.cpp  AssetManager.cpp  Board.cpp  ChessState.cpp  Core.cpp  Delegate.cpp  Object.cpp  Piece.cpp  Stage.cpp
ChessCore/src/widgets/: Button.cpp  EvaluationBar.cpp  HUD.cpp  ImageWidget.cpp  TextWidget.cpp  Widget.cpp
ChessGame/: CMakeLists.txt  config.h.in
ChessGame/include/: config.h
ChessGame/include/Level/: AnalysisBoardLevel.h  MainMenuLevel.h
ChessGame/include/gameFramework/: GameApplication.h
ChessGame/include/widgets/: AnalysisBoardHUD.h  MainMenuHUD.h
ChessGame/src/: main.cpp
ChessGame/src/Level/: AnalysisBoardLevel.cpp  MainMenuLevel.cpp
ChessGame/src/gameFramework/: GameApplication.cpp
ChessGame/src/widgets/: AnalysisBoardHUD.cpp  MainMenuHUD.cpp
